--- a/sales.html
+++ b/sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+  <link href="style.css" type="text/css" rel="stylesheet"/>
     <title>Document</title>
 </head>
 <body>
