--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-  <div id="one">
+  <div id="cookiesdetals"></div>
  
   <script src="app.js"></script>  
 </body>
