--- a/sales.html
+++ b/sales.html
@@ -6,6 +6,26 @@
 </head>
 <body>
   <div id="cookiesdetals"></div>
+  <form id="AmmanForm">
+    <fieldset>
+      <legend>newLocationObject</legend>
+      <label for="countryNameField">country : </label>
+      <input type="text" id="countryNameField" >
+      <br>
+      <label for="minValueField">minValue : </label>
+      <input type="number" id="minValueField" >
+      <br>
+      <label for="maxValueField">maxValue : </label>
+      <input type="number" id="maxValueField" >
+      <br>
+      <label for="avgValueField">avgValue : </label>
+      <input type="number" step="0.1" id="avgValueField" >
+     <br>
+      <input type="submit" value="Submit">
+
+
+    </fieldset>
+  </form>
  
   <script src="app.js"></script>  
 </body>
