--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="images/fish.jpg" alt="logo">
    
     <nav>
-        <li><a href="#">Sales</a></li>
+        <li><a href="sales.html">Sales</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Reviews</a></li>
     </nav>
