--- a/sales.html
+++ b/sales.html
@@ -9,7 +9,7 @@
     <img src="images/fish.jpg" alt="logo">
    
     <nav>
-        <li><a href="#">Home page</a></li>
+        <li><a href="index.html">Home page</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Reviews</a></li>
     </nav>
